# m2_pf_web

exo1/: CMakeLists.txt  default.nix
exo2/: default.nix  index.html  nixops-logical.nix
tp_cgi/: caesar_form.html  default.nix  hello.cabal  hello.nix  index.html  nixops-logical.nix  nixops-vbox.nix  shell.nix
tp_cgi/src/: caesar.hs  hello.hs
