-- hello.cabal
name:                hello
version:             0.1
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable hello.cgi
  main-is:             hello.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base, network, cgi, xhtml

executable caesar.cgi
  main-is:             caesar.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base, network, cgi, xhtml
